# league_c

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
art/: aquaman  ares  batman  black_manta  brother_blood  cyborg  despero  green_lantern  martian_manhunter  savitar  superman  vandal_savage  wonder_woman
control/config/: config.c  config.h
control/database/: database.c  database.h
control/database/operations/: operations.c  operations.h
control/fullmacro/: deconstruct.h  fullmacro.c
control/iterator/: iterator.h
control/iterator/array/: array.c  array.h
control/iterator/range/: range.c  range.h
control/login/: login.c  login.h
control/menu/: menu.c  menu.h
control/stream/: stream.c  stream.h
control/util/: util.c  util.h
control/zalloc/: zalloc.c  zalloc.h
database/: backup.create.sql  backup.insert.sql  create.sql  final.sql  insert.sql  procedure.sql  run.sh
model/hero/: Entity.c  Entity.h  Hero.c  Hero.h
model/model_add/: add.c  add.h
model/model_display/: display.c  display.h
model/model_utils/: util.c  util.h
